<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/colorPrimaryDark"
  android:orientation="vertical"
  tools:context=".MainActivity">
    <LinearLayout
      android:layout_centerInParent="true"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:paddingBottom="200dp"
      android:orientation="vertical">
        <ImageView
          android:id="@+id/logo"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:src="@drawable/mojoe_full_title_resized" />

        <EditText
          android:id="@+id/username_title"
          android:layout_width="250dp"
          android:layout_height="wrap_content"
          android:hint="@string/username_str"
          android:textColor="@color/colorAccent"
          android:inputType="textVisiblePassword|textNoSuggestions"
          android:layout_gravity="center"
          android:layout_marginTop="10dp"
          android:drawableLeft="@drawable/user_logo_resized"
          android:drawablePadding="10dp"
          android:paddingTop="5dp"
          android:paddingBottom="5dp"
          android:paddingLeft="10dp"
          android:background="@drawable/edit_round"
          android:elevation="8dp" />
        <EditText
          android:id="@+id/password_title"
          android:layout_width="250dp"
          android:layout_height="wrap_content"
          android:hint="@string/password_str"
          android:textColor="@color/colorAccent"
          android:inputType="textPassword"
          android:layout_gravity="center"
          android:layout_marginTop="10dp"
          android:drawableLeft="@drawable/lock_logo_resized"
          android:drawablePadding="10dp"
          android:paddingTop="5dp"
          android:paddingBottom="5dp"
          android:paddingLeft="10dp"
          android:background="@drawable/edit_round"
          android:elevation="8dp" />

        <LinearLayout
          android:layout_width="250dp"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:layout_marginTop="10dp">
            <Button
              android:id="@+id/login_btn"
              android:layout_width="wrap_content"
              android:layout_height="35dp"
              android:layout_gravity="center"
              android:layout_marginRight="10dp"
              android:text="@string/login_str"
              android:textSize="10dp"
              android:textColor="@color/colorHighEmp"
              android:background="@drawable/button_round"
              android:elevation="8dp"
              android:onClick="authenticateLogin"/>

            <View
              android:layout_width="0dp"
              android:layout_height="0dp"
              android:layout_weight="1" />

            <Button
              android:id="@+id/exit"
              android:layout_width="wrap_content"
              android:layout_height="35dp"
              android:layout_marginLeft="10dp"
              android:background="@drawable/button_round"
              android:elevation="8dp"
              android:text="@string/exit"
              android:textColor="@color/colorRed"
              android:textSize="10dp" />

        </LinearLayout>

        <TextView
          android:id="@+id/login_status"
          android:layout_width="250dp"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dp"
          android:layout_gravity="center"
          android:gravity="center"
          android:text="@string/login_failed"
          android:textSize="10dp"
          android:textColor="@color/colorRed"
          android:visibility="invisible" />
        </LinearLayout>
</RelativeLayout>
